okd/codementor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: codementor
  name: codementor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: codementor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: codementor
    spec:
      containers:
        - command:
            - python
            - app/main.py
            - --server
          image: codepunx/codementor:latest
          name: codementor
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /home/mentor/workflows
              name: codementor-data
            - mountPath: /var/log/mentor
              name: codementor-log
      restartPolicy: Always
      volumes:
        - name: codementor-data
          persistentVolumeClaim:
            claimName: codementor-data
        - name: codementor-log
          persistentVolumeClaim:
            claimName: codementor-log
