okd/codementor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: codementor
  name: codementor
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: codementor
