okd/shellbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: shellbox
  name: shellbox
spec:
  ports:
    - name: "2222"
      port: 2222
      targetPort: 22
  selector:
    io.kompose.service: shellbox
